# ec349

./: .env  .gitignore  EC349 u2008071.Rmd  GEMINI.md  NLP_NN.R  README.md  automate_pipeline.py  bert2.R  bert3.R  bert_test.R  create_notebook.py  dataset_partition.R  deprecated_plan.md  expanded_yelp_rating_prediction.ipynb  expanded_yelp_rating_prediction.py  fix_notebook_syntax.py  inline_notebook.py  integrated_yelp_notebook.ipynb  interactive_yelp_rating_prediction.ipynb  jupyter_notebook_specification.md  kaggle_yelp_rating_prediction.ipynb  master_script.R  misc.R  neural_network.R  plan1.md  pyproject.toml  requirements.txt  setup.py  startupscript.R  test_sentiment.py  verify_environment.py
.github/: copilot-instructions.md
.kilocode/: mcp.json
R/: data_preprocessing.R  feature_engineering.R  feature_selection.R  sentiment_analysis.R  utils.R
deprecated/: NLP_NN.R  bert2.R  bert3.R  bert_test.R  dataconversion.R  dataset_partition.R  feature_evaluation1.R  misc.R  neural_network.R  rfe.R  startupscript.R
examples/: inference.py  quick_start.py
extra_deprecated/: temp_runner.R
progress_reports/: progress_report.md
src/: config.py  data_loading.py  feature_selection.py  features.py  model.py  preprocessing.py  sentiment.py  train.py  utils.py
